Fixed <address> shift to the left when sidebar menu is expanded
Aligned <address> with contentContainer instead

--- a/css/style.scss
+++ b/css/style.scss
@@ -139,6 +139,7 @@ html {
 body {
   width: 100%;
   min-width: 960px;
+  font-size: 1rem;
   margin: auto;
   background-color: $greyscaleLevel9;
 }
@@ -416,8 +417,9 @@ address{
 
 /* --- Content elements -- */
 .contact {
-  width: 100%;
-  text-align: center;
+  font-size: $headerLevel0;
+  text-align: left;
+  margin-left: (121/960) * 100%;
   margin-bottom: 1rem;
 }
 
